# Smartnote

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_note.md
src/scripts/: reset_chromadb.py
src/smartnote/: cli.py
src/smartnote/core/: analyzer.py  api_test.py  classifier.py  enhancer.py  judge.py  score_logger.py  workflow.py
src/smartnote/rag/: embedding_store.py
src/smartnote/storage/: notion.py  obsidian.py
